; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/beri/extr_beri_mp.c_platform_init_secondary.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/beri/extr_beri_mp.c_platform_init_secondary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"beripic\00", align 1
@picmap = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @platform_init_secondary(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = call i32 (...) @platform_ipi_hardintr_num()
  store i32 %5, i32* %4, align 4
  %6 = call i32 @devclass_find(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @devclass_get_device(i32 %6, i32 %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i32*, i32** @picmap, align 8
  %11 = load i32, i32* %2, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %10, i64 %12
  store i32 %9, i32* %13, align 4
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @beripic_setup_ipi(i32 %14, i32 %15, i32 %16)
  %18 = load i32, i32* %2, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %28

20:                                               ; preds = %1
  %21 = call i32 (...) @mips_rd_status()
  %22 = load i32, i32* %4, align 4
  %23 = shl i32 1, %22
  %24 = shl i32 %23, 8
  %25 = shl i32 %24, 2
  %26 = or i32 %21, %25
  %27 = call i32 @mips_wr_status(i32 %26)
  br label %28

28:                                               ; preds = %20, %1
  ret void
}

declare dso_local i32 @platform_ipi_hardintr_num(...) #1

declare dso_local i32 @devclass_get_device(i32, i32) #1

declare dso_local i32 @devclass_find(i8*) #1

declare dso_local i32 @beripic_setup_ipi(i32, i32, i32) #1

declare dso_local i32 @mips_wr_status(i32) #1

declare dso_local i32 @mips_rd_status(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
